--- a/src/app/_components/blog/Blogintroduction.css
+++ b/src/app/_components/blog/Blogintroduction.css
@@ -1,62 +1,256 @@
-div{}
 
-h1{
-    margin-top: 20px;
+.lender {
+    text-align: center;
+    margin-top: 60px;
+}
+
+h1 {
+    margin-top: 50px;
     text-align: center;
 }
 
-/*各blog要素*/
-li{
-    padding: 10px;
-    background-color: #CFC8A9;
-}
 
-.blog-item{
-    display: flex;
-    align-items: flex-start;
-    margin:0 20px 10px 20px;
-    border-radius: 6px;
-}
-
-.blog-item:hover{
-    border: 2px #000;
-    background-color: #ddd;
-}
-
-
-.linkid{
-    margin-left: 10px;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-style: normal;
-}
-.linkid:hover{
-    text-decoration: underline;
-}
-
-
-/*blogintroductionの背景*/
-.backmain{
+.backmain {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /*4列に固定*/
+    gap: 20px;
+    padding: 40px 20px;
+    background-color: #f8f4ef;
+    justify-items: center;
     border: 4px #BF9E80;
     border-style:solid none none none;
-    padding: 30px 0 30px 0;
-    background-color: #f8f4ef;
 }
 
-.blog-date{
-    margin-top: -10px;
-    margin-bottom: 4px;
-    font-size: 12px;
-    color: #666;
-}
 
-.text-container {
+
+
+.blog-item {
+    background-color: #CFC8A9;
+    border-radius: 6px;
+    padding: 15px;
+    text-align: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 280px;
+    height: 380px;
+    box-sizing: border-box;
 }
 
-.sub-text{
-    display: inline-block;
-    margin-left: 20px;
+.blog-item:hover {
+    border: 2px black solid;
+    background-color: #cccccc;
 }
+
+.blog-image {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+
+.text-container {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.blog-date {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 5px;
+}
+
+
+.linkid {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+
+.sub-text {
+    font-size: 14px;
+    color: #333;
+    text-align: center;
+    margin-top: 5px;
+    min-height: 40px; /* 高さ統一 */
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* 最大2行まで表示 */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis; /* 省略記号（...）を表示 */
+    word-break: break-word;
+    max-width: 90%; /* 長すぎる単語を折り返す */
+}
+
+/*.sub-text {*/
+/*    font-size: 14px;*/
+/*    color: #333;*/
+/*    text-align: center;*/
+/*    margin-top: 5px;*/
+/*    min-height: 40px; !* サブタイトルの高さを統一 *!*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*}*/
+
+
+
+
+
+
+
+/*変更前*/
+
+/*div{}*/
+
+/*.lender{*/
+/*    text-align: center;*/
+/*    margin-top: 60px;*/
+/*}*/
+
+/*h1{*/
+/*    margin-top: 20px;*/
+/*    text-align: center;*/
+/*}*/
+
+
+
+
+/*li {*/
+/*    background-color: #CFC8A9;*/
+/*    border-radius: 6px;*/
+/*    padding: 10px;*/
+/*    text-align: center;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    max-width: 300px; !* 各ブログの最大幅 *!*/
+/*    margin: auto;*/
+/*}*/
+
+/*!*更新前*!*/
+/*!*li {*!*/
+/*!*    background-color: #CFC8A9;*!*/
+/*!*    border-radius: 6px;*!*/
+/*!*    padding: 10px;*!*/
+/*!*    text-align: center;*!*/
+/*!*    display: flex;*!*/
+/*!*    flex-direction: column;*!*/
+/*!*    align-items: center;*!*/
+/*!*}*!*/
+
+/*!*更新前*!*/
+/*!*各blog要素*!*/
+/*!*li{*!*/
+/*!*    margin: 0 20px 0 20px;*!*/
+/*!*    padding: 10px;*!*/
+/*!*    background-color: #CFC8A9;*!*/
+/*!*    border-radius: 6px;*!*/
+/*!*}*!*/
+
+/*.blog-item {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*}*/
+
+
+/*!*更新前*!*/
+/*!*.blog-item{*!*/
+/*!*    display: flex;*!*/
+/*!*    align-items: flex-start;*!*/
+/*!*    margin:0 20px 10px 20px;*!*/
+/*!*    border-radius: 6px;*!*/
+/*!*}*!*/
+
+/*.blog-item:hover{*/
+/*    border: 2px #000;*/
+/*    background-color: #ddd;*/
+/*}*/
+
+/*.linkid {*/
+/*    font-size: 1.2rem;*/
+/*    font-weight: bold;*/
+/*    margin-top: 5px;*/
+/*}*/
+
+
+/*!*更新前*!*/
+/*!*.linkid{*!*/
+/*!*    margin-left: 10px;*!*/
+/*!*    display: inline-block;*!*/
+/*!*    text-decoration: none;*!*/
+/*!*    font-size: 1.5rem;*!*/
+/*!*    font-style: normal;*!*/
+/*!*}*!*/
+/*.linkid:hover{*/
+/*    text-decoration: underline;*/
+/*}*/
+
+/*.backmain {*/
+/*    display: grid;*/
+/*    grid-template-columns: repeat(3, 1fr); !* 最大3列 *!*/
+/*    gap: 20px; !* 要素間のスペース *!*/
+/*    padding: 40px 20px;*/
+/*    background-color: #f8f4ef;*/
+/*    justify-content: center;*/
+/*}*/
+
+/*!*更新前*!*/
+/*!*.backmain {*!*/
+/*!*    display: grid;*!*/
+/*!*    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); !* 300px 幅の要素を自動配置 *!*!*/
+/*!*    gap: 20px; !* 要素間のスペース *!*!*/
+/*!*    padding: 40px 20px;*!*/
+/*!*    background-color: #f8f4ef;*!*/
+/*!*}*!*/
+
+
+/*!*更新前*!*/
+/*!*blogintroductionの背景*!*/
+/*!*.backmain{*!*/
+/*!*    border: 4px #BF9E80;*!*/
+/*!*    border-style:solid none none none;*!*/
+/*!*    padding: 40px 0 50px 0;*!*/
+/*!*    background-color: #f8f4ef;*!*/
+/*!*}*!*/
+
+/*.blog-date {*/
+/*    font-size: 14px;*/
+/*    color: #666;*/
+/*}*/
+
+/*!*更新前*!*/
+/*!*.blog-date{*!*/
+/*!*    margin-top: -10px;*!*/
+/*!*    margin-bottom: 4px;*!*/
+/*!*    font-size: 18px;*!*/
+/*!*    color: #666;*!*/
+/*!*}*!*/
+
+/*.text-container {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    margin-top: 10px;*/
+/*}*/
+
+
+/*!*更新前*!*/
+/*!*.text-container {*!*/
+/*!*    display: flex;*!*/
+/*!*    flex-direction: column;*!*/
+/*!*}*!*/
+
+/*.sub-text{*/
+/*    display: inline-block;*/
+/*    margin-left: 20px;*/
+/*}*/
