--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -126,7 +126,7 @@ div.purchaseMessage{
     margin: 50px auto 50px 50px;
     width: 80%;
     height: 400px;
-    background: #D9D9D9;
+    background: #ddd;
     border: #AAA solid 2px;
     border-radius: 4px;
 }
@@ -206,7 +206,7 @@ button img#sendMsg{
     overflow-wrap: break-word;
     border-radius: 10px;
     border: #000 1px solid;
-    background-color: #eee;
+    background-color: #fff;
 }
 
 /*---チャット右寄せ---*/
@@ -243,7 +243,7 @@ button img#sendMsg{
     align-items: center;
     max-width: 60%;
     padding: 10px 15px 10px 10px;
-    margin-left: 10px;
+    margin-left: 20px;
     margin-bottom: 10px;
     overflow-wrap: break-word;
     border-radius: 10px;
@@ -266,6 +266,10 @@ button img#sendMsg{
     margin: 5px 0 5px 10px;
 }
 
+.chaticon{
+    display: flex;
+    align-items: center;
+}
 .chaticon img{
     border-radius: 50%;
 }
@@ -274,5 +278,7 @@ button img#sendMsg{
 .comment-user-name-lef{
     display: flex;
     align-items: center;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
+    text-align: center;
+    margin-left: 5px;
 }
