--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -124,9 +124,17 @@ li#list_bell{
     border: none;
     color: #000000;
 }
-.bell svg{
+.bell svg {
     color: #8e7560;
+    transition: 0.2s;
 }
+.bell svg:hover{
+    color: #fff;
+    filter: drop-shadow(0 0 10px #605252);
+
+}
+
+
 .modal-content{
     width: 500px;
     height: 500px;
