--- a/src/app/_components/userNavigationModal/userNavigation.css
+++ b/src/app/_components/userNavigationModal/userNavigation.css
@@ -28,3 +28,11 @@ p#child-modal-description a:hover{
     cursor: pointer;
 }
 
+/*　アイコンホバー　*/
+.iconButton img{
+    transition:opacity 0.2s;
+}
+.iconButton:hover{
+    opacity: 0.8;
+    filter:drop-shadow(0 0 5px #fff);
+}
