--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -165,6 +165,11 @@ input[type=text]#msg{
     border-radius: 100%;
 }
 
+.chaticon img {
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 
 /* 送信ボタン仮設　作るにしてもアイコンにした方がいいかも */
 input[type=submit]{
@@ -198,6 +203,7 @@ button img#sendMsg{
 .comment-area-rig{
     display: flex;
     align-items: center;
+    position: relative;
     max-width: 60%;
     padding: 6px 10px;
     margin-right: 10px;
@@ -221,11 +227,18 @@ button img#sendMsg{
     margin-right: 10px;
 }
 
+.comment-emoji-rig{
+    position: absolute;
+    right: -11px;
+    bottom: -9px;
+    transform: rotate(-0.03turn);
+}
 
 /*---左寄せのチャット範囲---*/
 .comment-area-lef{
     display: flex;
     align-items: center;
+    position: relative;
     max-width: 60%;
     padding: 6px 10px;
     margin-left: 10px;
@@ -255,4 +268,17 @@ button img#sendMsg{
     display: flex;
     align-items: center;
     font-size: 1.1rem;
+}
+
+.comment-emoji-lef{
+    position: absolute;
+    right: 10px;
+    bottom: 9px;
+    transform: rotate(-0.03turn);
+}
+
+.emojiButtonPosition{
+    position: absolute;
+    right: -18px;
+    bottom: -20px;
 }
