--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -10,11 +10,6 @@ div #wrap{
 }
 
 main{
-    /*margin: 0;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-content: center;*/
-    /*background-color: #EBE8DB;*/
 }
 
 div.content{
@@ -39,12 +34,11 @@ div.content h2{
 
 div#kamera{
     position: relative;
-    margin: 20px auto;
+    margin: 20px auto 80px auto;
     width: 377px;
     height: 377px;
     flex-shrink: 0;
     background: #D9D9D9;
-    margin-bottom: 80px;
 }
 
 div#kamera img{
@@ -90,9 +84,7 @@ div.ListingBtn{
     width: 500px;
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
-    margin-bottom: 120px;
-    margin-top: 10%;
+    margin: 10% auto 120px auto;
 }
 
 div.ListingBtn button{
@@ -115,7 +107,8 @@ div.ListingBtn p{
 div.ListingBtn button.listingCancelbtn{
     background-color: #EBE8DB;
     color: #605252;
-    padding: 10px 10px;
+    letter-spacing: 0.1rem;
+    padding: 10px 15px;
 
 }
 
