--- a/src/app/_components/blog/Blogintroduction.css
+++ b/src/app/_components/blog/Blogintroduction.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 .blog-item:hover {
-    border: 2px black solid;
+    /*border: 2px black solid;*/
     background-color: #cccccc;
 }
 
@@ -89,6 +89,28 @@ h1 {
     word-break: break-word;
     max-width: 90%; /* 長すぎる単語を折り返す */
 }
+
+.more-button-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.more-button {
+    background-color: #0070f3;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.more-button:hover {
+    background-color: #005bb5;
+}
+
+
+
 
 /*.sub-text {*/
 /*    font-size: 14px;*/
