--- a/src/app/_components/listingScreenRadiobutton/listingScreenRadiobutton.css
+++ b/src/app/_components/listingScreenRadiobutton/listingScreenRadiobutton.css
@@ -13,14 +13,14 @@ body {
     margin:  5px auto 25px auto;
     display: flex;
     justify-content: center;
-    background-color: #f2f2e6;
+    background-color: #fff;
     border: 2px solid #605252;
     box-shadow: 2px 2px 0 #605252;
     transition:0.3s;
 
 }
 .radio:hover{
-    background-color: #fff;
+    background-color: #fffa;
 }
 
 .radio_button{
@@ -107,10 +107,14 @@ body {
     display: flex;
 }
 #outlined-basic{
-    border: 2px solid #000;
+    /*border: 2px solid #000;*/
+    box-shadow: 1px 2px 0 #000;
     border-radius: 5px;
     background-color: #fff;
+    transition: 0.2s;
 }
 #outlined-basic:hover{
-    box-shadow: 0 0 0 #8e7560;
+    background-color: #fffa;
+    box-shadow: 2px 2px 0 #8e7560;
 }
+
