--- a/src/app/product/[id]/product.css
+++ b/src/app/product/[id]/product.css
@@ -169,9 +169,10 @@ div#text a#seller img{
 /* 購入ボタン・アイコン #control*/
 div#controlProduct{
     display: flex;
+    width: 100%;
     margin-left: 50%;
     margin-bottom: 20px;
-    text-align: right;
+    align-items: center;
 }
 div#controlProduct img{
     display: inline-block;
