ログインフォームとのinput干渉を修正

--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -60,8 +60,11 @@ div.content h3.formTitle{
 div.content .txtInput{
     display: block;
     margin: 0 auto;
+    height: 2.5rem;
+    padding: 5px 10px;
     width: 350px;
     border-radius: 20px;
+    background-color: #fff;
 }
 div.content .txtInput:hover,.areaInput:hover{
     border: 2px solid #000;
