検索ボタンチョット変更

--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -33,7 +33,8 @@ h2#LStitle{
     line-height: normal;
     color: #fff;
     letter-spacing: 1rem;
-    background-color: #8e756098;
+    background-color: #8e7560;
+    border-radius: 5px;
 
 }
 
