--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -67,10 +67,12 @@ form#WordSearch button#SearchSubmit[type="submit"]{
     border-radius: 10%;
     color: #EBE8DB;
     background-color: #605252;
+    transition:0.2s;
 }
-form#WordSearch button[type="submit"]:hover{
+form#WordSearch button#SearchSubmit[type="submit"]:hover{
     border: 3px #8e7560 solid;
-    box-shadow: #8e7560  1px 1px 0 ;
+    box-shadow:none;
+    opacity: 0.8;
 
 }
 
