--- a/src/app/(user_communication_test)/directMessage/[id]/DMpage.css
+++ b/src/app/(user_communication_test)/directMessage/[id]/DMpage.css
@@ -14,6 +14,7 @@
 
 .userChatFrame{
     padding-top: 20px;
+    padding-bottom: 40px;
     margin: 0 auto;
     margin-top: 15px;
     width: 55%;
@@ -55,6 +56,7 @@
     padding: 6px 14px;
     margin: 14px 8px 0 0;
     max-width: 60%;
+    overflow-wrap: break-word;
     border-radius: 8px;
     font-size: 1.05rem;
     background-color: #fff;
