--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -47,9 +47,12 @@ div#kamera{
     background: #D9D9D9;
 }
 
-div#kamera img{
+.initCameraIcon{
     position: absolute;
-
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
 }
 
 div.content div#drop{
