--- a/src/app/_components/Toppage_2nd/common.css
+++ b/src/app/_components/Toppage_2nd/common.css
@@ -14,6 +14,8 @@ div.boxes{
     align-content: center;
     width: 250px;
     height: 250px;
+    background-size: cover;
+    object-fit: cover;
 }
 p.s2tit{
     /*width: 200px;*/
