--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -58,7 +58,26 @@ select#SearchSize{
     width: 6rem;
 }
 
-form#WordSearch button#SearchSubmit[type="submit"]{
+/*form#WordSearch button#SearchSubmit[type="submit"]{*/
+/*    margin: 0 0 0 0 ;*/
+/*    width: 5rem;*/
+/*    font-size: 1.2rem ;*/
+/*    box-shadow: #8e7560  2px 2px 0 ;*/
+
+/*    border-radius: 10%;*/
+/*    color: #EBE8DB;*/
+/*    background-color: #605252;*/
+/*    transition:0.2s;*/
+/*}*/
+/*form#WordSearch button#SearchSubmit[type="submit"]:hover{*/
+/*    border: 3px #8e7560 solid;*/
+/*    box-shadow:none;*/
+/*    opacity: 0.8;*/
+
+/*}*/
+
+
+.searchButton{
     margin: 0 0 0 0 ;
     width: 5rem;
     font-size: 1.2rem ;
@@ -69,7 +88,7 @@ form#WordSearch button#SearchSubmit[type="submit"]{
     background-color: #605252;
     transition:0.2s;
 }
-form#WordSearch button#SearchSubmit[type="submit"]:hover{
+.searchButton:hover{
     border: 3px #8e7560 solid;
     box-shadow:none;
     opacity: 0.8;
