--- a/src/app/(auth)/AuthGmail/[id]/AuthGmail.css
+++ b/src/app/(auth)/AuthGmail/[id]/AuthGmail.css
@@ -1,24 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
 /* コンテナ */
 .container {
     min-height: 100vh;
     padding: 2rem 2rem 5rem;
     font-family: var(--font-geist-sans);
-    background-color: #f5f5f5;
+    background-color: #D0C7B2;
+    background-size: 90%;
 }
-
+.backImage{
+    position: absolute;
+    width: 90%;
+    height: 80vh    ;
+}
 .form-wrapper {
-    max-width: 28rem;
+    max-width: 30rem;
     margin: 1.25rem auto 0;
     padding: 2rem;
-    background-color: white;
     border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    border: 1px solid #777;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+    background-color: #DCD7C5;
 }
 
 /* タイトル */
 .title {
     font-size: 1.5rem;
     font-weight: 700;
+    font-family: "Italiana", sans-serif;
     color: #1f2937;
     margin-bottom: 1.5rem;
     text-align: center;
@@ -79,26 +88,32 @@
 }
 
 .submit-button {
-    background-color: #dc2626;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 1px solid #888;
+    color: #000;
+    background-color: #D9D9D9;
 }
 
 .submit-button:hover {
-    background-color: #b91c1c;
+    background-color: #AAAAAA;
 }
 
 .verify-button {
-    background-color: #2563eb;
+    border: 1px solid #888;
+    background-color: #D9D9D9;
+    color: #000;
 }
 
 .verify-button:hover {
-    background-color: #1d4ed8;
+    background-color: #AAAAAA;
 }
 
 /* メッセージ */
 .success-message {
     padding: 1rem;
-    background-color: #dcfce7;
-    color: #15803d;
+    background-color: #D9D9D9;
+    color: #000;
     border-radius: 0.375rem;
     text-align: center;
 }
