--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -92,7 +92,7 @@ li.Headersearch svg{
 
 /* ユーザーネーム:ログイン遷移 */
 li#UserName{
-    margin: 15px 0 0 0;
+    margin: 0 0 0 30px;
     width: 16rem;
     overflow:hidden;
     vertical-align: bottom;
