--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -23,12 +23,15 @@ header div.nav {
 }
 
 
-header div.title h1 {
-    font-family: "Italiana", sans-serif;
-    font-size: 3.2rem;
-    font-weight: normal;
-    letter-spacing: 5px;
-    width: 100%;
+header div.title{
+    width: 20%;
+    height: auto;
+    text-decoration: none;
+}
+.logoImage {
+    width: 50%;
+    height: auto;
+    margin-top: -5%;
     margin-left: 20%;
     text-decoration: none;
 }
@@ -277,7 +280,7 @@ span.under_bar {
     display: block;
     content: "";
     width: 99.5%;
-    margin-top: -1px;
+    margin-top: -7px;
     height: 11px;
     border-bottom: 1px solid #000000;
 }
