--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -62,6 +62,10 @@ div.kamera{
     -webkit-transform: translateY(-50%) translateX(-50%);
 }
 
+img.photo_preview{
+    object-fit: contain;
+}
+
 div.content div#drop{
 }
 
