--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -26,7 +26,7 @@ width: 1200px;
 }
 .productList_{
     width: 20%;
-    height: 400px;
+    height: auto;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 6px 7px #aaa;
