--- a/src/app/_components/emojiPicker/emojiPicker.css
+++ b/src/app/_components/emojiPicker/emojiPicker.css
@@ -7,3 +7,18 @@ body{
     position: absolute;
     z-index: 2;
 }
+
+.emojiButton {
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #bbb;
+    border: 1px solid #4b5563;
+    border-radius: 50%;
+    cursor: pointer;
+}
