--- a/src/app/_components/emojiPickerDirectMessage/emojiPickerDirectMessage.css
+++ b/src/app/_components/emojiPickerDirectMessage/emojiPickerDirectMessage.css
@@ -3,7 +3,32 @@ body{
     margin: 0;
 }
 
+.comment-emojiPick{
+    position: relative;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    z-index: 100;
+}
+
 .emojiPicker{
     position: absolute;
-    z-index: 2;
+    z-index: 100;
+}
+
+.emojiButton {
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #bbb;
+    border: 1px solid #4b5563;
+    border-radius: 50%;
+    cursor: pointer;
 }
