--- a/src/app/_components/stripe/stripe.css
+++ b/src/app/_components/stripe/stripe.css
@@ -2,9 +2,10 @@ body{
     padding: 0;
     margin: 0;
 }
-
-div.StripePurchaseButtonMain{
-    width:80%;
+.jus{
+    margin-left: 10%;
+    justify-content: normal;
+    align-items: center;
 }
 
 button.StripePurchaseButton{
@@ -13,4 +14,9 @@ button.StripePurchaseButton{
     font-size: 1.2rem;
     color: #fff;
     border-radius: 50px;
+}
+
+.selectProduct{
+    margin-top: 5%;
+    width: 100%;
 }
