ProductのSideebar削除、それに伴い写真のサイズを大きくしました その他:購入ボタンの色変え・ホバー Productページへのリンクに入れ子変更によるクリック可能部分調整 スライドの文字にシャドウ追加

--- a/src/app/_components/Toppage_2nd/common.css
+++ b/src/app/_components/Toppage_2nd/common.css
@@ -26,6 +26,8 @@ p.s2tit{
     font-size: 2rem;
     text-align: center;
     vertical-align: bottom;
+    text-shadow: #fff 0 0 20px, #fff 0 0 15px, #fff 0 0 10px;
+
     /*overflow: hidden;*/
 }
 /*Swiper設定上書き*/
