--- a/src/app/_components/stripe/stripe.css
+++ b/src/app/_components/stripe/stripe.css
@@ -9,11 +9,19 @@ body{
 }
 
 button.StripePurchaseButton{
+    margin: -10px 10px 0 0;
     width: 100px;
-    background-color: #000;
+    background-color: #8e7560;
     font-size: 1.2rem;
+    font-weight: bold;
     color: #fff;
     border-radius: 50px;
+    box-shadow: 2px 2px 0 #605252;
+    transition: 0.2s;
+}
+button.StripePurchaseButton:hover{
+    box-shadow: 0 0 0 #605252;
+    opacity: 0.8;
 }
 
 .selectProduct{
