confirmUserのメディアクエリ追加 650ぐらいまでは対応できると思います

--- a/src/app/(confirm)/confirmUser/confirmUser.css
+++ b/src/app/(confirm)/confirmUser/confirmUser.css
@@ -134,3 +134,24 @@ div.rightbar_product_text{
 div.rightbar_product_text p{
     font-size: 1.2rem;
 }
+
+@media screen and (max-width: 1060px) {
+    main#CUmain{
+        flex-direction: column;
+        align-items: center;
+    }
+    h1#CUtitle{
+        margin: 0;
+    }
+    div#confirms{
+        width: 80%;
+    }
+    div.confirm{
+        margin: 30px 0 30px 0;
+        width: 100%;
+    }
+    div.rightbar{
+        margin: 10px 0;
+        width: 80%;
+    }
+}
